add seg series instance uid

--- a/workflows/TotalSegmentator/Notebooks/postProcessingExtractPerframe.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/postProcessingExtractPerframe.ipynb
@@ -220,6 +220,7 @@
         "            pffgs = pydicom.dcmread(\n",
         "                f\"decompressedSegmentationsDICOM/{series_id}\",\n",
         "                specific_tags=[\n",
+        "                    \"SeriesInstanceUID\",\n",
         "                    \"ReferencedSeriesSequence\",\n",
         "                    \"PerFrameFunctionalGroupsSequence\",\n",
         "                ],\n",
@@ -228,12 +229,14 @@
         "            referencedSeriesInstanceUID = pffgs.ReferencedSeriesSequence[\n",
         "                0\n",
         "            ].SeriesInstanceUID\n",
+        "            SeriesInstanceUID=pffgs.SeriesInstanceUID\n",
         "            data = []\n",
         "\n",
         "            # Extract data from Per-frame Functional Groups Sequence\n",
         "            if \"PerFrameFunctionalGroupsSequence\" in pffgs:\n",
         "                for item in pffgs.PerFrameFunctionalGroupsSequence:\n",
         "                    frame_data = {\n",
+        "                        \"SEG_SeriesInstanceUID\": SeriesInstanceUID,\n",
         "                        \"ReferencedSeriesSequence_SeriesInstanceUID\": referencedSeriesInstanceUID,\n",
         "                        \"FrameContentSequence_DimensionIndexValues\": [\n",
         "                            str(s)\n",
