prepare repo for v1.2.0

--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -6,7 +6,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/v1.2.0/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -24,7 +24,7 @@
         "id": "WAtR3bhCl_-x"
       },
       "source": [
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/images/dicom_seg_and_radiomics_sr.png\">"
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.2.0/workflows/TotalSegmentator/Docs/images/dicom_seg_and_radiomics_sr.png\">"
       ]
     },
     {
@@ -89,7 +89,7 @@
         "*  Docker images can be found @ https://hub.docker.com/repository/docker/imagingdatacommons/dicom_seg_pyradiomics_sr/tags\n",
         "*  The link to dockerfile along with git commit hash used for building the docker image can be found in one of the layers called 'LABEL'\n",
         "\n",
-        "    <img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/images/dicom_seg_and_radiomics_sr_docker.png\">\n",
+        "    <img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.2.0/workflows/TotalSegmentator/Docs/images/dicom_seg_and_radiomics_sr_docker.png\">\n",
         "\n",
         "*  We use a python package called Papermill, that can run the notebook with out having to convert it to python script. This allows us maintain one copy of code instead of two.\n",
         "* A sample papermill command is\n",
@@ -391,7 +391,7 @@
         "  os.remove(f'map_to_binary.py')\n",
         "except OSError:\n",
         "  pass\n",
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/resources/dicomseg_metadata_whole_slicerAsRef.json\n",
+        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.2.0/workflows/TotalSegmentator/resources/dicomseg_metadata_whole_slicerAsRef.json\n",
         "!wget -q https://raw.githubusercontent.com/wasserth/TotalSegmentator/v2.0.5/totalsegmentator/map_to_binary.py\n",
         "import map_to_binary"
       ]
@@ -409,7 +409,7 @@
         "    dtype={\"SegmentedPropertyTypeModifierCodeSequence.CodeValue\": str},\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df = pd.read_csv(\n",
-        "    \"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/resources/radiomicsFeaturesMaps.csv\",\n",
+        "    \"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.2.0/workflows/TotalSegmentator/resources/radiomicsFeaturesMaps.csv\",\n",
         "    index_col=[0]\n",
         ")\n",
         "totalsegmentator_radiomics_features_code_mapping_df\n"
