add non nlst query, dynamic resource assignment for inference

--- a/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
@@ -185,50 +185,78 @@
         "# Create a new column name for the batch_id column\n",
         "batch_id_column = f'entity:twoVM_{now}_id'\n",
         "\n",
-        "# Create a new dataframe to store the batch information\n",
+        "# Initialize an empty DataFrame to store the batch information\n",
         "batch_df = pd.DataFrame(columns=[batch_id_column, 'SeriesInstanceUIDs', 'idc-version', 'dicomSegAndSRcpu', 'dicomSegAndSRram'])\n",
         "\n",
-        "# Create a list to store YAML-formatted SeriesInstanceUIDs\n",
-        "yaml_series_list = []\n",
+        "# Initialize an empty list to temporarily hold series for a batch\n",
+        "temp_series_list = []\n",
         "\n",
-        "# Analyze each file and add a row to the batch dataframe\n",
-        "for i, df_batch in enumerate(dfs):\n",
+        "# Initialize a counter for the batch number\n",
+        "batch_num = 1\n",
         "\n",
-        "    # Create a list of seriesInstanceuids for this batch\n",
-        "    series_list = df_batch['SeriesInstanceUID'].tolist()\n",
+        "# Analyze each series and add a row to the batch dataframe\n",
+        "for i, series in df.iterrows():\n",
+        "\n",
+        "    # Check if the series has more than 800 slices\n",
+        "    if series['sopInstanceCount'] > 800:\n",
+        "        # This series should be processed by itself\n",
+        "        series_list = [series['SeriesInstanceUID']]\n",
+        "    else:\n",
+        "        # This series can be added to a batch\n",
+        "        temp_series_list.append(series['SeriesInstanceUID'])\n",
+        "\n",
+        "        # If we've added 12 series to the batch or if this is the last series, finalize the batch\n",
+        "        if len(temp_series_list) == 12 or i == len(df) - 1:\n",
+        "            series_list = temp_series_list\n",
+        "            temp_series_list = []\n",
+        "        else:\n",
+        "            # Move on to the next series\n",
+        "            continue\n",
         "\n",
         "    # Create a dictionary with the key 'SeriesInstanceUIDs'\n",
         "    data_dict = {'SeriesInstanceUIDs': series_list}\n",
         "\n",
         "    # Create the filename for the YAML file\n",
-        "    yaml_filename = os.path.join(manifests_dir, f'batch_{i+1}.yaml')\n",
+        "    yaml_filename = os.path.join(manifests_dir, f'batch_{batch_num}.yaml')\n",
         "\n",
         "    # Write the dictionary to a YAML file\n",
         "    with open(yaml_filename, 'w') as yaml_file:\n",
         "        yaml.dump(data_dict, yaml_file)\n",
         "\n",
-        "    max_sopinstancecount = df_batch['sopInstanceCount'].max()\n",
+        "    max_sopinstancecount = max([df.loc[df['SeriesInstanceUID'] == uid, 'sopInstanceCount'].iloc[0] for uid in series_list])\n",
         "\n",
         "    # Format the series list as a JSON dictionary\n",
         "    json_series_dict = json.dumps({\"SeriesInstanceUIDs\": series_list})\n",
         "\n",
-        "    if max_sopinstancecount >= 300:\n",
-        "        cpu = 8\n",
-        "        ram = 32\n",
+        "    if max_sopinstancecount > 300:\n",
+        "        radiomics_cpu = 8\n",
+        "        radiomics_ram = 32\n",
         "    else:\n",
-        "        cpu = 4\n",
-        "        ram = 16\n",
+        "        radiomics_cpu = 4\n",
+        "        radiomics_ram = 16\n",
+        "\n",
+        "    if max_sopinstancecount > 800:\n",
+        "        inference_cpu = 8\n",
+        "        inference_ram = 52\n",
+        "    else:\n",
+        "        inference_cpu = 2\n",
+        "        inference_ram = 13\n",
         "\n",
         "    # Create a new row with the batch information and the series list\n",
         "    new_row = pd.DataFrame({\n",
-        "        batch_id_column: [i+1],\n",
+        "        batch_id_column: [batch_num],\n",
         "        'SeriesInstanceUIDs': [json_series_dict],\n",
-        "        'dicomSegAndSRcpu': [cpu],\n",
-        "        'dicomSegAndSRram': [ram],\n",
+        "        'dicomSegAndSRcpu': [radiomics_cpu],\n",
+        "        'dicomSegAndSRram': [radiomics_ram],\n",
+        "        'inferenceCpu': [inference_cpu],\n",
+        "        'inferenceRam': [inference_ram],\n",
         "        'idc-version': 'v17'\n",
         "    })\n",
         "    # Add the new row to the batch dataframe\n",
         "    batch_df = pd.concat([batch_df, new_row], ignore_index=True)\n",
+        "\n",
+        "    # Increment the batch number\n",
+        "    batch_num += 1\n",
         "\n",
         "# Display the final batch_df\n",
         "batch_df"
